objects/agf__ADM_Work__c.object
<CustomObject>
    <description>Multipurpose object that defines bugs, defects, incidents, user stories, test cases, etc.</description>
    <fields>
        <fullName>agf__Additional_Details__c</fullName>
        <label>Additional Details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Age_With_Scrum_Team_When_Closed__c</fullName>
        <description>Difference between closed date and the last time the scrum team field was modified unless the scrum team field was modified after the bug was closed. This calculation excludes weekends.</description>
        <formula>IF(ISNULL(agf__Scrum_Team_Last_Modified__c), null,
IF(  ( agf__Closed__c == 1 &amp;&amp; agf__Closed_On__c &gt; agf__Scrum_Team_Last_Modified__c),
CASE(MOD(  DATEVALUE(agf__Closed_On__c) - DATE(1985,6,24),7),
0 , CASE( MOD( DATEVALUE(agf__Closed_On__c) - DATEVALUE(agf__Scrum_Team_Last_Modified__c) ,7),1,0,2,0,3,1,4,2,5,3,6,4,0),
1 , CASE( MOD( DATEVALUE(agf__Closed_On__c) - DATEVALUE(agf__Scrum_Team_Last_Modified__c) ,7),1,1,2,1,3,1,4,2,5,3,6,4,0),
2 , CASE( MOD( DATEVALUE(agf__Closed_On__c) - DATEVALUE(agf__Scrum_Team_Last_Modified__c) ,7),1,1,2,2,3,2,4,2,5,3,6,4,0),
3 , CASE( MOD( DATEVALUE(agf__Closed_On__c) - DATEVALUE(agf__Scrum_Team_Last_Modified__c) ,7),1,1,2,2,3,3,4,3,5,3,6,4,0),
4 , CASE( MOD( DATEVALUE(agf__Closed_On__c) - DATEVALUE(agf__Scrum_Team_Last_Modified__c) ,7),1,1,2,2,3,3,4,4,5,4,6,4,0),
5 , CASE( MOD( DATEVALUE(agf__Closed_On__c) - DATEVALUE(agf__Scrum_Team_Last_Modified__c) ,7),1,0,2,1,3,2,4,3,5,4,6,0,0),
6 , CASE( MOD( DATEVALUE(agf__Closed_On__c) - DATEVALUE(agf__Scrum_Team_Last_Modified__c) ,7),1,0,2,0,3,1,4,2,5,3,6,4,0),
999)
+
(FLOOR(( DATEVALUE(agf__Closed_On__c) - DATEVALUE(agf__Scrum_Team_Last_Modified__c) )/7)*5)
, 0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Difference between closed date and the last time the scrum team field was modified unless the scrum team field was modified after the bug was closed. This calculation excludes weekends.</inlineHelpText>
        <label>Age With Scrum Team When Closed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Age_With_Scrum_Team__c</fullName>
        <description>Age with Scrum Team is the difference between now and the last time the Scrum Team field was modified. This calculation excludes weekends.</description>
        <formula>IF(ISNULL(agf__Scrum_Team_Last_Modified__c), null,
CASE(MOD( TODAY() - DATE(1985,6,24),7),
0 , CASE( MOD( TODAY() - DATEVALUE(agf__Scrum_Team_Last_Modified__c) ,7),1,0,2,0,3,1,4,2,5,3,6,4,0),
1 , CASE( MOD( TODAY() - DATEVALUE(agf__Scrum_Team_Last_Modified__c) ,7),1,1,2,1,3,1,4,2,5,3,6,4,0),
2 , CASE( MOD( TODAY() - DATEVALUE(agf__Scrum_Team_Last_Modified__c) ,7),1,1,2,2,3,2,4,2,5,3,6,4,0),
3 , CASE( MOD( TODAY() - DATEVALUE(agf__Scrum_Team_Last_Modified__c) ,7),1,1,2,2,3,3,4,3,5,3,6,4,0),
4 , CASE( MOD( TODAY() - DATEVALUE(agf__Scrum_Team_Last_Modified__c) ,7),1,1,2,2,3,3,4,4,5,4,6,4,0),
5 , CASE( MOD( TODAY() - DATEVALUE(agf__Scrum_Team_Last_Modified__c) ,7),1,0,2,1,3,2,4,3,5,4,6,0,0),
6 , CASE( MOD( TODAY() - DATEVALUE(agf__Scrum_Team_Last_Modified__c) ,7),1,0,2,0,3,1,4,2,5,3,6,4,0),
999)
+
(FLOOR(( TODAY() - DATEVALUE(agf__Scrum_Team_Last_Modified__c) )/7)*5)
)</formula>
        <inlineHelpText>Age with Scrum Team is the difference between now and the last time the Scrum Team field was modified. This calculation excludes weekends.</inlineHelpText>
        <label>Age With Scrum Team</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Age__c</fullName>
        <description>Age is the difference between now and when the record was created if the record has not been resolved; otherwise, age is the difference between now and when the record was resolved. The age is removed once the record is closed.</description>
        <formula>IF(
    ISNULL(agf__Resolved_On__c), (NOW() - agf__Created_On_import__c),
    IF(
        ISNULL(agf__Closed_On__c), (NOW() - agf__Resolved_On__c), null
    )
)</formula>
        <inlineHelpText>Age is the difference between now and when the record was created if the record has not been resolved; otherwise, age is the difference between now and when the record was resolved. The age is removed once the record is closed.</inlineHelpText>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Apex_Hammer_Compile_Failure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apex Hammer Compile Failure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Assigned_On__c</fullName>
        <description>Deprecated field for bugforce 1.0</description>
        <label>Assigned On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assignee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Assignees__c</fullName>
        <description>This field is used as a transport object. Do not use this field on list view criteria or reports!</description>
        <inlineHelpText>Assignees of this work record receive email on save.</inlineHelpText>
        <label>transfer Assignees</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Attributes__c</fullName>
        <label>Attributes</label>
        <picklist>
            <picklistValues>
                <fullName>Automated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flapper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regressed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requires Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Debt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trust</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>agf__Auto_Build__c</fullName>
        <description>Used for Test Failures only to help build masters create reports.  Will be deprecated in favor of a normalized data model in a later version</description>
        <label>Auto Build</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Backburner_Rank__c</fullName>
        <label>Backburner Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Branch__c</fullName>
        <description>Used for Test Failures only to help build masters create reports.  Will be deprecated in favor of a normalized data model in a later version</description>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Budget_ID__c</fullName>
        <description>This is an ID that is used by the TechOps team to identify a budget line item for a specific user story.</description>
        <inlineHelpText>ID used to identify a budget line item for a story (used by TechOps).</inlineHelpText>
        <label>Budget ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Bug_Number__c</fullName>
        <label>Bugforce #</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__CS_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field defaults to the Investigation creator if the creator is in support (otherwise it defaults to blank). It can also be populated/overridden manually.</description>
        <inlineHelpText>This field defaults to the Investigation creator if the creator is in support (otherwise it defaults to blank). It can also be populated/overridden manually.</inlineHelpText>
        <label>Support Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Catchup_Factor__c</fullName>
        <description>This field is set with an Apex Code Trigger. It&apos;s purpose is to convey that for each unit of resource for which a task is assigned there is a factor of increased time each remaining day (over the expected time based on burndown) necessary to get the story back in line with the burndown.</description>
        <label>Catch-up Factor</label>
        <precision>7</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Child_ID__c</fullName>
        <label>Child_ID</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Closed_By__c</fullName>
        <label>Closed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Closed_On__c</fullName>
        <label>Closed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>agf__Closed__c</fullName>
        <formula>CASE(  agf__Status__c, &quot;Tested&quot;, 1, &quot;Closed&quot;, 1, &quot;Closed-Untested&quot;, 1, &quot;Closed-U/Ftest&quot;, 1, &quot;Completed&quot;, 1, &quot;Not Reproducible&quot;, 1, &quot;Never&quot;, 1, &quot;Not a bug&quot;, 1, &quot;Duplicate&quot;, 1, &quot;Closed - Duplicate&quot; , 1, &quot;Closed - Known Bug Exists&quot;, 1, &quot;Closed - New Bug Logged&quot;, 1, &quot;Closed - No Fix - Working as Designed&quot;,1, &quot;Closed - No Fix - Feature Request&quot;,1, &quot;Closed - No Fix - Will Not Fix&quot;,1, &quot;Closed - LAP Request Approved&quot;, 1, &quot;Closed - LAP Request Denied&quot;, 1, &quot;Closed - Resolved Without Code Change&quot;, 1, &quot;Rejected&quot;, 1, &quot;Closed - Resolved With Internal Tools&quot;, 1, &quot;Closed - Defunct&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Color__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Color</label>
        <referenceTo>agf__ADM_Color__c</referenceTo>
        <relationshipLabel>Work</relationshipLabel>
        <relationshipName>Work</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Column_Rank__c</fullName>
        <label>Column Rank</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Column__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Column</label>
        <referenceTo>agf__ADM_Column__c</referenceTo>
        <relationshipLabel>Work</relationshipLabel>
        <relationshipName>Work</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Comment_Copy__c</fullName>
        <label>Comment Copy</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Complete_By__c</fullName>
        <label>Complete By</label>
        <picklist>
            <picklistValues>
                <fullName>Jan 2009 sprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feb 2009 sprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mar 2009 sprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apr 2009 sprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May 2009 sprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jun 2009 sprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jul 2009 sprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aug 2009 sprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sep 2009 sprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oct 2009 sprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nov 2009 sprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dec 2009 sprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>--None--</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__Completed_Hours__c</fullName>
        <description>Total of Actual hours on all the child tasks associated to this work-item</description>
        <label>Completed Hours</label>
        <summarizedField>agf__ADM_Task__c.agf__Actual_Hours__c</summarizedField>
        <summaryFilterItems>
            <field>agf__ADM_Task__c.agf__Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>agf__ADM_Task__c.agf__Work__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>agf__Created_By_import__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User imported from bugforce that created the original bug.</description>
        <label>Created By (import)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Created_On_Date__c</fullName>
        <formula>IF( ISNULL( agf__Created_On_import__c ) ,  DATEVALUE( CreatedDate ) ,  DATEVALUE( agf__Created_On_import__c )  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created On Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Created_On_import__c</fullName>
        <description>Data/time imported from the original bug from bugforce.</description>
        <label>Created On (import)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>agf__Critical_CRM_Feature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Critical CRM Feature or Org Inaccessible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Customer__c</fullName>
        <label>Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Data_Silo_Test_Affected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Silo Test Affected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Deal_at_Risk__c</fullName>
        <label>Deal at Risk</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New &amp; Renewal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__Dependencies__c</fullName>
        <label>Dependencies</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Dependents__c</fullName>
        <description>This field will be updated by Apex triggers on CRUD operations of Dependency objects. The number will reflect the count of User Stories that are dependent on the given Story.</description>
        <label>Dependents</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Description__c</fullName>
        <inlineHelpText>Comments will be added to the Work record and included in an email to the names listed in the Email Notifications section after saving. Formatting will also be preserved when saving via in line edit.</inlineHelpText>
        <label>Comment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Detailed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this checkbox for epic stories that have been divided into detailed stories and therefore the epic no longer needs to appear on the backlog.</inlineHelpText>
        <label>Exclude from Prioritize View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Details__c</fullName>
        <inlineHelpText>User type (As a...) Goal (I want to...) Reason (so that...) Additional Details</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Details_and_Steps_to_Reproduce__c</fullName>
        <inlineHelpText>Text contents of this field will be sent in initial record creation only</inlineHelpText>
        <label>Details and Steps to Reproduce</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>agf__Due_Date__c</fullName>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>agf__Email2GUS_Addresses__c</fullName>
        <description>Used to record the email list from the to and cc list on emails sent into GUS from outside sources.</description>
        <label>Email2GUS Addresses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Email_On_Save_Copy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email On Save Copy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Email_On_Save__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to send an email to the users in the To: field when you save this record.</inlineHelpText>
        <label>Email On Save</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Email_Subscription_ID__c</fullName>
        <inlineHelpText>Enter email aliases separated by spaces. These users are sent one email if the &quot;Email on Save&quot; check box is selected when you click &quot;Save.&quot; They do not automatically receive future updates.</inlineHelpText>
        <label>To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Email_Subscription_Queue__c</fullName>
        <formula>IF( agf__Email_Subscription_ID__c = &quot;&quot; , &quot;&quot;, HYPERLINK(&quot;/p/own/Queue/d?id=&quot; &amp; agf__Email_Subscription_ID__c , agf__Email_Subscription_ID__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Subscription Queue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Encoded_Recipients_Txt_Area__c</fullName>
        <label>Encoded Recipients</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Environment__c</fullName>
        <label>Environment</label>
        <picklist>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blitz Localhost</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>agf__Epic_Rank__c</fullName>
        <label>Epic Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Epic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Epic</label>
        <referenceTo>agf__ADM_Epic__c</referenceTo>
        <relationshipLabel>Work</relationshipLabel>
        <relationshipName>Work</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Estimated_Financial_Impact__c</fullName>
        <label>Estimated Financial Impact</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>agf__Executive_Involved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Executive Involved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Feature_Rank__c</fullName>
        <label>Feature Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Found_In_Build_Copy__c</fullName>
        <label>Found In Build Copy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Found_In_Build_Name__c</fullName>
        <formula>agf__Found_in_Build__r.Name</formula>
        <label>Found In Build Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Found_in_Build__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Found In Build field is a lookup to the Build object.  Enter the build where the bug was introduced.</inlineHelpText>
        <label>Found in Build</label>
        <referenceTo>agf__ADM_Build__c</referenceTo>
        <relationshipLabel>Work (Found in Build)</relationshipLabel>
        <relationshipName>Found_in_Build</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Frequency_Name__c</fullName>
        <formula>agf__Frequency__r.Name</formula>
        <label>Frequency Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Frequency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Frequency reflects how often the target user will encounter the issue.</inlineHelpText>
        <label>Frequency</label>
        <referenceTo>agf__ADM_Frequency__c</referenceTo>
        <relationshipLabel>Work</relationshipLabel>
        <relationshipName>Work</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Goal__c</fullName>
        <label>Goal (I want to...)</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Has_Story_Points__c</fullName>
        <formula>IF(agf__Story_Points__c &gt;= 0, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <label>Has Story Points?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Help_Status__c</fullName>
        <description>Tracks whether the Documentation team is engaged and the progress of the documentation.</description>
        <label>Help Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Info Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pilot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__Impact_Name__c</fullName>
        <formula>agf__Impact__r.Name</formula>
        <label>Impact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Impact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Impact</label>
        <referenceTo>agf__ADM_Impact__c</referenceTo>
        <relationshipLabel>Work</relationshipLabel>
        <relationshipName>Work</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Is_Ignorable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For internal use only.</description>
        <label>Is Ignorable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Is_Template__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Known_Issue_ID__c</fullName>
        <label>Known Issue ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Known_Issue_Link__c</fullName>
        <formula>IF(ISBLANK(agf__Known_Issue_ID__c),&quot;No Known Issue&quot;,HYPERLINK(&quot;https://success.salesforce.com/issues_view?id=&quot; &amp; agf__Known_Issue_ID__c, &quot;View Known Issue (&quot; &amp; TEXT(agf__Known_Issue_Num_Reporting_Customers__c) &amp; &quot; reports)&quot;,&quot;_knownissue&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Known Issue Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Known_Issue_Num_Reporting_Customers__c</fullName>
        <description>The number of customers reporting this bug as a known issue</description>
        <label>KI Reporting Customers</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Last_Modified_By_Copy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for email2gus in order to show who created a comment.</description>
        <label>Last Modified By Copy</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for email2gus in order to show who created the last comment.</description>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Last_Updated_By__c</fullName>
        <formula>$User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Updated By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Log_Bug_From_Template__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; + Id + &quot;/e?clone=1&amp;RecordTypeLogicalName=Bug&quot;, &quot;Log Bug From Template&quot;, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Log Bug From Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Major_Func_Area__c</fullName>
        <label>Major Func Area</label>
        <picklist>
            <controllingField>agf__Product_Area__c</controllingField>
            <picklistValues>
                <fullName>.NET</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__Minor_Func_Area__c</fullName>
        <label>Minor Func Area</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Mobile_Device_OS__c</fullName>
        <label>Mobile Device OS</label>
        <picklist>
            <picklistValues>
                <fullName>iOS 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android 4.2.x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android 4.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android 4.4.x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android 5.x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IOS8</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>agf__Mobile_Device__c</fullName>
        <label>Mobile Device</label>
        <picklist>
            <picklistValues>
                <fullName>iPhone 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iPhone 5S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iPhone 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iPhone 6 Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iPad 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iPad Air</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iPad Air 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iOS Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Galaxy S3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Galaxy 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Galaxy 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Galaxy Note 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Galaxy Note3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nexus 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nexus 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nexus 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nexus 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nokia 1020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surface Pro 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>agf__Mobile_Network__c</fullName>
        <label>Mobile Network</label>
        <picklist>
            <picklistValues>
                <fullName>WiFi 4G/LTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offline/Airplane mode</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>agf__Num_Of_Prod_Occ__c</fullName>
        <inlineHelpText>The number of production incidents associated with this Work record. May include out-of-memory errors or gacks.</inlineHelpText>
        <label>Production Incidents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Number_of_Cases__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The number of cases associated with this Work record.</inlineHelpText>
        <label>Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Number_of_Change_Lists__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Change Lists</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Number_of_Orgs_affected__c</fullName>
        <label>Number of Orgs affected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Number_of_Tests_Classes_affected__c</fullName>
        <label>Number of Tests/Classes affected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Origin__c</fullName>
        <defaultValue>&apos;Outside&apos;</defaultValue>
        <label>Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>